2012-05-23  Ian Vollick  <vollick@chromium.org>

        Add vollick to list of contributors.
        https://bugs.webkit.org/show_bug.cgi?id=87305

        Reviewed by Adam Barth.

        * Scripts/webkitpy/common/config/committers.py:

2012-05-23  Xianzhu Wang  <wangxianzhu@chromium.org>

        [Chromium-Android] Fix chromium_android_unittest
        https://bugs.webkit.org/show_bug.cgi?id=87196

        Reviewed by Tony Chang.

        Update unit tests after ChromiumAndroidPort supported apk based
        DumpRenderTree.

        * Scripts/webkitpy/layout_tests/port/chromium_android_unittest.py:
        (ChromiumAndroidPortTest):
        (ChromiumAndroidPortTest.mock_run_command_fn): Moved out from test_get_last_stacktrace so that other tests can use it as a common command line handler.
        (ChromiumAndroidPortTest.test_get_last_stacktrace):
        (ChromiumAndroidPortTest.test_get_crash_log): Added to test our overridden _get_crash_log()
        (ChromiumAndroidDriverTest):
        (ChromiumAndroidDriverTest.setUp):
        (ChromiumAndroidDriverTest.test_cmd_line): Added to test our overridden cmd_line()
        (ChromiumAndroidDriverTest.test_write_command_and_read_line): Added test of unexpected EOF (indicating crash on Android)

2012-05-23  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        [watchlist] Add myself and create a watch rule to catch Attribute related patches
        https://bugs.webkit.org/show_bug.cgi?id=87303

        Reviewed by Alexis Menard.

        * Scripts/webkitpy/common/config/watchlist:

2012-05-23  Dirk Pranke  <dpranke@chromium.org>

        garden-o-matic should not fetch from debug bots if it also knows about the release bots
        https://bugs.webkit.org/show_bug.cgi?id=86916

        Reviewed by Adam Barth.

        This change pushes all of the logic for rebaselining a cluster
        of failures (a list of tests failing a list of suffixes on a