@@ -1,3 +1,15 @@
+2012-05-23  Tony Chang  <tony@chromium.org>
+
+        Remove the Chromium Grid Layout bot from the waterfall
+        https://bugs.webkit.org/show_bug.cgi?id=87311
+
+        Reviewed by Ryosuke Niwa.
+
+        I removed the compiler define in r117613, so we don't need a separate
+        bot to compile/test this code.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+
 2012-05-23  Ian Vollick  <vollick@chromium.org>
 
         Add vollick to list of contributors.
